--- a/moodclient/res/layout/launch.xml
+++ b/moodclient/res/layout/launch.xml
@@ -55,7 +55,16 @@
         android:padding="10dp"
         android:text="@string/history"
         android:textColor="@color/action_text"
-        android:textStyle="bold"
         android:visibility="gone" />
+
+    <Button
+        android:id="@+id/groupMood_fotovote_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/button"
+        android:padding="10dp"
+        android:text="@string/fotovote_create"
+        android:textColor="@color/action_text" />
 
 </LinearLayout>
