--- a/moodclient/res/layout/topic_questions.xml
+++ b/moodclient/res/layout/topic_questions.xml
@@ -8,6 +8,7 @@
         android:id="@+id/groupMood_topicName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:background="@drawable/bg_main"
         android:padding="5dp"
