--- a/moodclient/res/layout/topic_questions.xml
+++ b/moodclient/res/layout/topic_questions.xml
@@ -4,16 +4,35 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/groupMood_topicName"
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
-        android:background="@drawable/bg_main"
-        android:padding="5dp"
-        android:text="{topic.name}"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_marginTop="2dp"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/groupMood_topicName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main"
+            android:padding="5dp"
+            android:text="{topic.name}"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ImageButton
+            android:id="@+id/groupMood_topic_create_button"
+            android:layout_width="40dp"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="1dp"
+            android:background="@drawable/button"
+            android:contentDescription="@string/topic_create"
+            android:padding="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_addtopic"
+            android:visibility="gone" />
+    </LinearLayout>
 
     <uk.co.jasonfry.android.tools.ui.SwipeView
         android:id="@+id/groupMood_questionsSwipe"
