--- a/moodclient/res/layout/question_result_answer.xml
+++ b/moodclient/res/layout/question_result_answer.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="@plurals/label_result_numvotes"
+                android:text="{ Anzahl }"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/sub_text" />
         </LinearLayout>
