--- a/moodclient/res/layout-land/launch.xml
+++ b/moodclient/res/layout-land/launch.xml
@@ -9,13 +9,15 @@
         android:layout_height="wrap_content"
         android:background="@drawable/background"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical" >
 
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="100dp"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/headlogo" />
+            android:src="@drawable/logo"
+            android:layout_marginTop="5dp"
+             />
 
         <LinearLayout
             android:layout_width="fill_parent"
