--- a/moodclient/res/layout/actionbar.xml
+++ b/moodclient/res/layout/actionbar.xml
@@ -3,69 +3,86 @@
     android:layout_width="fill_parent"
     android:layout_height="44dp"
     android:background="@drawable/bg_actionbar"
+    android:baselineAligned="false"
     android:orientation="horizontal" >
-
-    <Button
-        android:layout_width="109dp"
-        android:layout_height="30dp"
-        android:layout_margin="6dp"
-        android:background="@drawable/headlogo"
-        android:id="@+id/groupMood_actionbar_logo"
-         />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
+        android:layout_marginLeft="3dp"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/groupMood_actionbar_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="38dp"
+            android:layout_margin="3dp"
+            android:background="@drawable/actionbar_logo" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="right"
         android:orientation="horizontal" >
-        
-        <ImageView
-            android:layout_width="2px"
-            android:layout_height="44dp"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            android:src="@drawable/bg_actionbar_sep"
-            />
-
-        <Button
-            android:layout_width="50dp"
-            android:layout_height="38dp"
-            android:layout_marginTop="3dp"
-            android:background="@drawable/ic_checkmark_white_tab"
-            android:id="@+id/groupMood_actionbar_button_questions"
-            />
 
         <ImageView
-            android:layout_width="2px"
+            android:layout_width="1dp"
             android:layout_height="44dp"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            android:src="@drawable/bg_actionbar_sep" />
-
-        <Button
-            android:layout_width="50dp"
-            android:layout_height="38dp"
-            android:layout_marginTop="3dp"
-            android:background="@drawable/ic_tab_bubble" 
-            android:id="@+id/groupMood_actionbar_button_comments"
-            />
-
-        <ImageView
-            android:layout_width="2px"
-            android:layout_height="44dp"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
-            android:src="@drawable/bg_actionbar_sep" />
-
-        <Button
-            android:layout_width="50dp"
-            android:layout_height="38dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
-            android:background="@drawable/ic_tab_chart"
-            android:id="@+id/groupMood_actionbar_button_results" 
-            />
+            android:src="@drawable/bg_actionbar_sep" />
+
+        <Button
+            android:id="@+id/groupMood_actionbar_button_questions"
+            android:layout_width="50dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/ic_checkmark_white_tab" />
+
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:src="@drawable/bg_actionbar_sep" />
+
+        <Button
+            android:id="@+id/groupMood_actionbar_button_comments"
+            android:layout_width="50dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/ic_tab_bubble" />
+
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:src="@drawable/bg_actionbar_sep" />
+
+        <Button
+            android:id="@+id/groupMood_actionbar_button_results"
+            android:layout_width="50dp"
+            android:layout_height="38dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/ic_tab_chart" />
+
+        <ImageView
+            android:layout_width="1dp"
+            android:layout_height="44dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:src="@drawable/bg_actionbar_sep" />
+
+        <Button
+            android:id="@+id/groupMood_actionbar_button_share"
+            android:layout_width="50dp"
+            android:layout_height="38dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginTop="3dp"
+            android:background="@drawable/ic_tab_share" />
     </LinearLayout>
 
 </LinearLayout>
