--- a/moodclient/res/layout/launch.xml
+++ b/moodclient/res/layout/launch.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:contentDescription="@string/app_name"
+        android:layout_marginTop="5dp"
         android:src="@drawable/logo" />
 
     <TextView
