--- a/moodclient/res/layout/fotovote_dialog.xml
+++ b/moodclient/res/layout/fotovote_dialog.xml
@@ -22,7 +22,8 @@
             android:id="@+id/groupMood_fotovote_create_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp" >
+            android:layout_marginBottom="5dp"
+            android:hint="@string/meeting_name_hint" >
 
             <requestFocus />
         </AutoCompleteTextView>
@@ -108,6 +109,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
+            android:hint="@string/groupmood_server_hint"
             android:inputType="textUri" />
 
         <Button
