--- a/moodclient/res/layout/topic_questions.xml
+++ b/moodclient/res/layout/topic_questions.xml
@@ -19,7 +19,8 @@
             android:background="@drawable/bg_main"
             android:padding="5dp"
             android:text="{topic.name}"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/main_text" />
 
         <ImageButton
             android:id="@+id/groupMood_topic_create_button"
@@ -54,6 +55,14 @@
             android:orientation="vertical" >
 
             <!-- Hier rein werden die Antwort-Möglichkeiten gerendert: question_action.xml -->
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/bg_sub"
+                android:padding="5dp"
+                android:text="@string/no_questions"
+                android:textColor="@color/sub_text" />
         </LinearLayout>
 
         <include
