--- a/moodclient/res/layout/question_result_answer.xml
+++ b/moodclient/res/layout/question_result_answer.xml
@@ -3,15 +3,13 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:paddingBottom="2dp" 
-    >
+    android:paddingBottom="2dp" >
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="@drawable/bg_sub_lesser_invert" 
-    	android:orientation="vertical"    
-        >
+        android:background="@drawable/bg_sub_lesser_invert"
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -19,24 +17,24 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            android:orientation="horizontal"
-            android:weightSum="2" >
+            android:orientation="horizontal" >
 
             <TextView
                 android:id="@+id/groupMood_question_resultLabel"
-                android:layout_width="fill_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:text="@string/label_result_avg"
+                android:text="Dies ist ein sehr langer Options-Name der zu einem häßlichen Umbruch führen soll."
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/sub_text" />
 
+            <!-- @string/label_result_avg -->
+
             <TextView
                 android:id="@+id/groupMood_question_resultNumVotes"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="right"
                 android:text="{ Anzahl }"
                 android:textAppearance="?android:attr/textAppearanceSmall"
